# TP-devops

./: README.md
Task_2/: CMakeLists.txt  README.md
Task_2/A/: preparing.py
Task_2/B/: CMakeLists.txt  lib.cpp  lib.h
Task_2/C/: main.cpp  main.h
